[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.2.2",
    "duckdb>=1.5.4",
    "marimo>=0.23.13",
    "matplotlib>=3.11.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "pyarrow>=25.0.0",
    "scipy>=1.18.0",
    "sqlglot>=30.12.0",
    "xlrd>=2.0.2",
]
